Fix layout problem in event detail, fix layout looks in footer

--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@
 }
 
 .footer {
+  padding: 16px;
   background-color: #000000;
   color: #fff;
   display: flex;
